--- a/index.html
+++ b/index.html
@@ -1,32 +1,82 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Sameeha's Website</title>
+        <title>My Resume</title>
     </head>
     <body>
-        <h1>Sameeha Shaik's Portfolio</h1>
-        <h2>I'm a Web Developer Enthusiast</h2>
+        <h1>Sameeha Shaik</h1>
+        <img src="./Images/cat.jpg" height="130" alt="Photo of fake Sameeha Shaik">
         <hr>
-        <a href = "./public/movie-ranking.html">Movie Ranking Project</a><br>
-        <img src="./assets/images/Movie-ranking.png" height="300" alt="Movie Ranking Project Screenschot"><br>
-        <a href="./public/birthday-invite.html">Birthday Invite Project</a><br>
-        <img src="./assets/images/birthday-invite.png" height="300" alt="Birthday Invite Project Screenschot"><br>
+        <h2>Summary</h2>
+        <p> As an IT professional with hands-on experince in web development and cyber security, I am motivated to utilize my technical skills to make meaningful contributions to society, and aspire to develop innovative software solutions that address real-world challenges while Staying up-to-date with the latest technologial adcanvements and industry trends in the field. </p>
         <hr>
-        <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+        <h2>Education:</h2>
+        <ul>
+            <li>Bachelors of Technology, Electronics and Communications Engineering - <i>Jawaharlal Nehru Technology University Hyderabad (2018-2022)</i></li>
+        </ul>
+        <hr>
+        <h2>Professional Experience:</h2>
+        <ul>
+            <li><h3>Senior Analyst / Software Engineer - <i>Capgemini</i></h3></li>
+            <p><i>July 2022 - Present</i></p>
+            <ul>
+                <p><i><b>Roles / Responsibilities</b></i></p>
+                <li>Developed and maintained websites, implementing frontend and back-end technologies to ensure seamless functionalities and user experience.</li>
+                <li>Collaborated with designers, developers, and project stakeholders to meet project requirements, providing technical expertise and contributing to project management.</li>
+                <li>Communicated effectively with team members and project stakeholders, facilitating understanding, collaboration, and timely updates.</li>
+            </ul>
+        </ul>
+        <ul>
+            <li><h3>Web Developer Intern - <i>Capgemini</i></h3></li>
+            <p><i>March 2022 - July 2022</i></p>
+            <ul>
+                <p><i><b>Roles / Responsibilities</b></i></p>
+                <li>Assisted in designing and developing user interfaces for websites and applications, collaborating with designers and developers.</li>
+                <li>Developed responsive and visually appealing web pages using HTML, CSS, and JavaScript to ensure compatibility across various browsers.</li>
+                <li>Actively participated in collaborative team projects, providing input on user experience improvements and working with cross-functional teams.</li>
+            </ul>
+        </ul>
+        <ul>
+            <li><h3>Web Developer Intern - <i>Blackbuck Engineers Pvt. Ltd.</i></h3></li>
+            <p><i>May 2021 - June 2021</i></p>
+            <ul>
+                <p><i><b>Roles / Responsibilities</b></i></p>
+                <li>Proficient in web development using HTML, CSS, and JavaScript and skilled in managing databases using MySQL for data storage and retrieval. Utilized Git for version control and collaboration with other developers.</li>
+                <li>Developed and maintained clean, organized, and efficient code for optimal performance and usability.</li>
+            </ul>
+        </ul>
+        <hr>
+        <h2> Skills:</h2>
+        <ul>
+            <li><i>Programming Languages:</i> C, C++, Python, Java, JavaScript</li>
+            <li><i>Web Development:</i> HTML, CSS, Bootstrap, JavaScript, Node.JS</li>
+            <li><i>Database Management:</i> MySQL, MongoDB, Microsoft SQL Server</li>
+            <li><i>Operating Systems:</i> Windows, Linux</li>
+        </ul>
+        <hr>
+        <h2>Projects:</h2>
+        <ul>
+            <li><h3>StopStalk Clone</h3></li>
+            <ul>
+                <li>Developed a web-based application using HTML, CSS, and JavaScript that serves as a clone of the StopStalk website.</li>
+                <li>Designed the application to render information about user achievements in online coding platforms such as LeetCode, CodeChef, and Codeforces.</li>
+            </ul>
+            <li><h3>Penetration Testing</h3></li>
+            <ul>
+                <li>Conducted a comprehensive penetration testing exercise on a given website to identify vulnerabilities.</li>
+                <li>Created a detailed report outlining the vulnerabilities identified, the risks associated with them, and recommended remedial actions to mitigate the risks.</li>
+            </ul>
+            <li><h3>Skin Cancer Detection using MATLAB</h3></li>
+            <ul>
+                <li>Designed and implemented algorithms to detect various types of skin cancers at early stages.</li>
+                <li>Conducted extensive research and analysis to identify key factors and indicators for skin cancer detection.</li>
+                <li>Achieved significant success in accurately detecting and classifying skin lesions using the developed algorithms.</li>
+            </ul>
+        </ul>
+        <hr>
+        
+        <footer><a href="./Contact.html">Contact Me Here</a> <br><br>
+        © Sameeha Shaik. All rights reserved.</footer>
     </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
